--- a/index.html
+++ b/index.html
@@ -4,11 +4,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Primary Meta Tags -->
+  <title>Ihza Mahendra | Fullstack Developer | React & Laravel Specialist</title>
+  <meta name="title" content="Ihza Mahendra | Fullstack Developer | React & Laravel Specialist" />
+  <meta name="description" content="Fullstack Developer from Pontianak, Indonesia with 5+ years experience. Specializing in React, TypeScript, Laravel, and modern web development." />
+  <meta name="keywords" content="Fullstack Developer, React Developer, Laravel Developer, Web Developer, Pontianak, Indonesia, TypeScript, JavaScript" />
+  <meta name="author" content="Ihza Mahendra" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ihzamahendra.com/" />
+  <meta property="og:title" content="Ihza Mahendra | Fullstack Developer" />
+  <meta property="og:description" content="Fullstack Developer from Pontianak, Indonesia with 5+ years experience in React, Laravel, and modern web technologies." />
+  <meta property="og:image" content="/ihza.webp" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://ihzamahendra.com/" />
+  <meta property="twitter:title" content="Ihza Mahendra | Fullstack Developer" />
+  <meta property="twitter:description" content="Fullstack Developer from Pontianak, Indonesia with 5+ years experience in React, Laravel, and modern web technologies." />
+  <meta property="twitter:image" content="/ihza.webp" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/6.png" />
+  
+  <!-- Fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,100;1,9..40,1000&display=swap"
     rel="stylesheet" />
-  <title>Ihza Mahendra</title>
-  <link rel="icon" type="image/png" href="/6.png" />
 
 </head>
 
